# ESP32-TapGate

./: .gitattributes  .gitignore  .gitmodules  ADMIN_SESSION_MANAGEMENT_FIX.md  BUGFIX_ADMIN_SESSION.md  LICENSE  README.md  debug_scenario.md  setup-dev-env.bat  setup-dev-env.sh
device_firmware/main/: CMakeLists.txt  Kconfig.projbuild  constants.h  device_err.h  main.cpp  types.h
device_firmware/main/channels/: channel_router.cpp  channel_router.h  channels.h  status.h
device_firmware/main/channels/ble/: ble.cpp  ble.h  ble_config.cpp  ble_config.h
device_firmware/main/channels/dummy/: dummy.cpp  dummy.h  dummy_config.cpp  dummy_config.h
device_firmware/main/common/diagnostic/: diagnostic.cpp  diagnostic.h
device_firmware/main/common/event_journal/: event_journal.c  event_journal.h
device_firmware/main/common/helpers/: helper_uuid.h
device_firmware/main/common/nvm/: nvm.cpp  nvm.h  nvm_partition.h
device_firmware/main/contexts/: ctx_device.cpp  ctx_device.h
esp32_mcu/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  partitions.csv  quick-setup.bat  quick-setup.sh  regenerate-protobuf.bat  regenerate-protobuf.sh  sdkconfig  test-build.sh
esp32_mcu/components/admin_portal/: CMakeLists.txt  admin_portal_core.c  admin_portal_core.h  admin_portal_device.c  admin_portal_device.h  admin_portal_state.c  admin_portal_state.h  device_bridge.c  device_bridge.h  dns_server.c  dns_server.h  http_server.c  http_server.h  http_service.c  http_service.h  http_service_facade.c  http_service_facade.h  http_service_logic.c  http_service_logic.h  http_service_types.h
esp32_mcu/components/admin_portal/assets/: add_network.html  ap.html  ap.js  app.js  app_old.js  debug.html  index.html  main.html  main.js  network_connect.html  page_add_network.html  page_auth.html  page_busy.html  page_change_psw.html  page_clients.html  page_device.html  page_enroll.html  page_events.html  page_main.html  page_network_connect.html  page_off.html  page_wifi.html  style.css  styles.css  wifi.js
esp32_mcu/components/admin_portal/pages/: page_add_network.c  page_add_network.h  page_ap.c  page_ap.h  page_auth.c  page_auth.h  page_busy.c  page_busy.h  page_change_psw.c  page_change_psw.h  page_clients.c  page_clients.h  page_common.c  page_common.h  page_descriptor.h  page_device.c  page_device.h  page_enroll.c  page_enroll.h  page_events.c  page_events.h  page_main.c  page_main.h  page_network_connect.c  page_network_connect.h  page_off.c  page_off.h  page_wifi.c  page_wifi.h  pages.h
esp32_mcu/components/admin_portal/pages/page_auth/: page_auth.c  page_auth.h
esp32_mcu/components/admin_portal/pages/page_busy/: page_busy.c  page_busy.h
esp32_mcu/components/admin_portal/pages/page_change_psw/: page_change_psw.c  page_change_psw.h
esp32_mcu/components/admin_portal/pages/page_clients/: page_clients.c  page_clients.h
esp32_mcu/components/admin_portal/pages/page_device/: page_device.c  page_device.h
esp32_mcu/components/admin_portal/pages/page_off/: page_off.c  (+1 more)
esp32_mcu/components/admin_portal/test/: test_admin_portal.c  test_session_mgmt.c
esp32_mcu/components/clients/: CMakeLists.txt  clients.c  clients.h
esp32_mcu/components/common/: CMakeLists.txt  constants.h  types.h
esp32_mcu/components/common/crc32/: crc32.c
esp32_mcu/components/common/nvm/: nvm.c  nvm.h  nvm_partition.h
esp32_mcu/components/diagnostic/: CMakeLists.txt  diagnostic.c  diagnostic.h  memory_inventory.c  memory_inventory.h
esp32_mcu/components/ecies_crypto/: CMakeLists.txt  ecies.c  ecies.h  mbedtls_compat.h
esp32_mcu/components/entity_store/: client_entity.h  clients.h  device.h  device_entity.h
esp32_mcu/components/entitystore/: clients.c  device.c  device_entity.h
esp32_mcu/components/event_journal/: CMakeLists.txt  event_journal.c  event_journal.h
esp32_mcu/components/logs/: CMakeLists.txt  logs.c  logs.h
esp32_mcu/components/nanopb/: CMakeLists.txt
esp32_mcu/components/nvm/: CMakeLists.txt  nvm.c  nvm.h  nvm_partition.h
esp32_mcu/components/rsapem/: CMakeLists.txt  rsapem.c  rsapem.h
esp32_mcu/components/users/: CMakeLists.txt  users.h
esp32_mcu/components/wifi_manager/: CMakeLists.txt  bits.h  nvm_defines.h  wifi_manager.c  wifi_manager.h
esp32_mcu/docs/: protocol.md
esp32_mcu/main/: CMakeLists.txt  device_context.c  device_context.h  led.h  main.c
esp32_mcu/messages/: CMakeLists.txt  README.md  messages.pb.c  messages.pb.h
esp32_mcu/tests/: CMakeLists.txt  test_clients.c  test_types.c  unity.h
esp32_mcu/tests_host/: CMakeLists.txt  test_admin_portal_core.c  test_admin_portal_device.c  test_admin_portal_state  test_admin_portal_state.c  test_clients.c  test_crc32.c  test_ecies.c  test_http_service_logic.c  test_logs.c  test_nvm.c  test_rsapem.c  test_types.c
esp32_mcu/tests_host/mocks/: esp_random_mock.c  mock_nvs.c  nvs_mock.c
esp32_mcu/tests_host/mocks/include/: esp_err.h  esp_log.h  esp_random.h  logs.h  nvs.h  nvs_flash.h  sdkconfig.h  wifi_manager.h
esp32_mcu/tests_host/unity/: unity.c  unity.h
tapgate_firmware/main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
tapgate_firmware/main/common/: call.h  constants.h  fcall.h  types.h  uuid.h
tapgate_firmware/main/common/datetime/: datetime.cpp  datetime.h
tapgate_firmware/main/common/event_journal/: event_journal.c  event_journal.h
tapgate_firmware/main/common/nvm/: nvm.cpp  nvm.h
tapgate_firmware/main/common/uuid/: uuid.cpp  uuid.h  uuid_str.cpp
tapgate_firmware/main/ctx_client/: client_entity.h
tapgate_firmware/main/ctx_device/: device_ctx.cpp  device_ctx.h  device_entity.h
tapgate_firmware/main/device_ctx/: device_ctx.cpp  device_ctx.h
tapgate_firmware/main/diag/: board_info.h  reset_reason.h  wait_dbg.c  wait_dbg.h
tapgate_firmware/tests/test_base/main/: CMakeLists.txt  test_main.cpp  test_uuid.cpp
tapgate_firmware/tests_host/: CMakeLists.txt  test_base.cpp  test_device_ctx.cpp  test_event_journal.cpp  test_event_journal_debug.cpp  test_uuid.cpp
tapgate_firmware/tests_host/mocks/: esp_err.h  esp_log.h  nvs.h  uuid_stub.cpp
tapgate_firmware/tests_host/unity/: unity.c  unity.h
(+203 files in other folders)
